@@ -1,3 +1,3 @@
 cast x into
-           ^
-12: syntax error: "\n": "as", "into", or "to" expected
+          ^
+11: syntax error: "as", "into", or "to" expected
