@@ -28,6 +28,9 @@ Fixed printing of `typedef`s of nested types, e.g.:
 For types that are `typedef`s, now printing `aka` followed by their underlying
 types in more cases.
 
+** Fixed escaped newlines
+Fixed escaped newline handling when not using GNU readline.
+
 
 * Changes in Cdecl 15.0
 
